@@ -252,6 +252,9 @@ Changes on 1.2.0 since 1.1.0:
     into $(libdir)/pcmanfm folder and use "#include <pcmanfm-modules.h>"
     directive in the code.
 
+* Added new menu option 'Tools'->'Run a Command in Current Folder' to run
+    an arbitrary command line from the folder opened in current tab.
+
 
 Changes on 1.1.0 since 1.0.1:
 
